# personal-assistant

./: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: feature-builder.agent.md  plan-to-docs.agent.md  poc-architect.agent.md  senior-engineer.agent.md
.github/instructions/: CODING_STANDARDS.instructions.md  feature-kickoff.instructions.md  senior-engineer-core.instructions.md
.github/prompts/: new-feature.prompt.md
.github/skills/domain-driven-development/: SKILL.md
.github/skills/memory-hooks/: SKILL.md
.github/skills/plan-to-docs/: SKILL.md
.github/skills/poc-architect/: SKILL.md
.github/skills/senior-engineer-javascript/: SKILL.md
.github/skills/senior-engineer-python/: SKILL.md
.github/skills/visual-explainer/: SKILL.md
deploy/: docker-compose.override.yml  docker-compose.yml  telegram-assistant-visual-explainer.html
deploy/searxng/: settings.yml
development/: test_timezone_tools.py  test_tools_registration.py  test_video_all_paths.py  test_video_real_world.py  test_video_transcription.py
development/playground/: test_full_transcription.py  test_instagram_transcription.py  test_tiktok_transcription.py  test_youtube_bot_detection.py
local_code/docs/telegram-assistant/: README.md  spec.md
local_code/docs/telegram-assistant/architecture/: overview.md  tech-stack.md  ubiquitous-language.md
local_code/docs/telegram-assistant/implementation/: phase-0-bootstrap.md  phase-1-bot-skeleton.md  phase-1-summary.md  phase-2-memory.md  phase-2-summary.md  phase-3-research.md  phase-3-summary.md  phase-4-notes.md  phase-4-summary.md  phase-5-summary.md  phase-5-tasks.md  phase-6-checkins-sessions.md  phase-6-summary.md  phase-6.5-agent-refinement.md  phase-7-calendar-alarms.md  phase-8-sandbox.md
local_code/docs/telegram-assistant/verification/: acceptance-checklist.md
local_code/docs/video-transcription/: README.md
local_code/docs/video-transcription/api/: tool-spec.md
local_code/docs/video-transcription/architecture/: overview.md
local_code/docs/video-transcription/guides/: getting-started.md
src/assistant/: main.py
src/assistant/shared/: config.py  exceptions.py  logging.py  time.py
src/assistant/telegram/: bot.py  constants.py  formatting.py  keyboards.py  markdown_to_html.py  pending_state.py
tests/: conftest.py
tests/conversation/: test_domain.py  test_repositories.py  test_use_cases.py
tests/prompts/: test_prompt_repository.py
tests/scheduler/: test_checkin_tools.py  test_domain.py  test_parse_reminder_time.py  test_repositories.py  test_use_cases.py
tests/shared/: test_time.py
tests/tasks/: test_use_cases.py
tests/telegram/: test_file_requests.py  test_formatting.py  test_markdown_to_html.py  test_tool_commands.py
tests/video/: test_extract_video_transcript.py  test_integration.py  test_transcription_queue.py  test_youtube_adapter.py  test_ytdlp_bot_detection.py  test_ytdlp_extractor.py
(+100 files in other folders)
