[project]
name = "assistant"
version = "0.1.0"
description = "Self-hosted Telegram AI personal assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0",
    "aiogram>=3.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "faster-whisper>=1.0",
    "groq>=0.9",
    "httpx>=0.27",
    "mistune>=3.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.2.0",
    "pydantic-settings>=2.0",
    "rebrowser-playwright>=1.47.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.0",
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=0.6",
]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "types-aiofiles>=23.0",
    "watchfiles>=0.21",
]

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "faster_whisper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "youtube_transcript_api.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yt_dlp.*"
ignore_missing_imports = true


[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # asserts and hardcoded test tokens are idiomatic in pytest test files

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
    "integration: tests that hit real external services (may be slow or flaky)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"